modificando o botão da acessibilidade

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="circle-frame"></div>
                     </div>
                     <div class="about-texts">
-                        <p class="bio-text"> Estudo no colégio Adolpho, em Astorga, faço cursinho, focada e dedicando parte do meu dia (aproximadamente 15 horas do meu dia) estudando! Ou seja, ja tenho uma certa intimidade com os estudos. Nos meus tempos livres aproveito com meu namorado, vou em eventos da igreja, algumas vezes me chamam para pregar ( e eu amo, pois é maravilhoso levar a palavra de Deus para aqueles que são sedentos do amor de Deus!)</p>
+                        <p class="bio-text"> Estudo no colégio Adolpho, em Astorga, faço cursinho, dedicando parte do meu dia (aproximadamente 15 horas) estudando! Ou seja, ja tenho uma certa intimidade com os estudos. Nos meus tempos livres aproveito com meu namorado, vou em eventos da igreja, algumas vezes me chamam para pregar ( e eu amo, pois é maravilhoso levar a palavra de Deus para aqueles que são sedentos do amor de Deus!)</p>
                     </div>
                     <div class="skills-grid"></div>
                 </div>
