--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="social-links">
                         <h3>Se conecte comigo</h3>
                         <div class="social-icons">
-                            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://lh3.googleusercontent.com/a/ACg8ocI3bBGAeq-Uy17OHm3p3BctEZEwqrxeEivvBpXpcZHwY6KWrOJV=s360-c-no" target="_blank"><i class="fab fa-linkedin"></i></a>
                             <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
@@ -108,7 +108,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="year"></span> Feito com ❤ por Sam Bispo.</p>
+            <p>&copy; <span id="year"></span> Feito com ❤ por Lívia Bueno.</p>
         </div>
     </footer>
 
